<resources>
    <string name="app_name">DataStore</string>
    <string name="title_vanilla_preferences">Vanilla</string>
    <string name="title_preferences_preferences">Preferences</string>
    <string name="title_proto_preferences">Proto</string>
    <string name="title_json_preferences">Json</string>
    <string name="title_secure_preferences">Secure</string>
    <string name="title_credentials">Credentials</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="title_preferences">Preferences</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_display_name">Display name</string>
    <string name="switch_display_dob">Display date of birth</string>
    <string name="title_data_loopback">Data loopback</string>
    <string name="btn_save">Save</string>
    <string name="err_invalid_date">Invalid date: %1$s</string>
</resources>