<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vanillaPreferences"
        android:enabled="true"
        android:icon="@drawable/ic_vanilla"
        android:title="@string/title_vanilla_preferences"/>
    <item
        android:id="@+id/preferencesPreferences"
        android:enabled="true"
        android:icon="@drawable/ic_preferences"
        android:title="@string/title_preferences_preferences"/>
    <item
        android:id="@+id/protoPreferences"
        android:enabled="true"
        android:icon="@drawable/ic_proto"
        android:title="@string/title_proto_preferences"/>
    <item
        android:id="@+id/jsonPreferences"
        android:enabled="true"
        android:icon="@drawable/ic_json"
        android:title="@string/title_json_preferences"/>
    <item
        android:id="@+id/securePreferences"
        android:enabled="true"
        android:icon="@drawable/ic_secure"
        android:title="@string/title_secure_preferences"/>
</menu>