<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/navigation"
    app:startDestination="@id/vanillaPreferences">

    <fragment
        android:id="@+id/vanillaPreferences"
        android:name="com.motorro.datastore.vanilla.VanillaPreferencesFragment"
        android:label="@string/title_vanilla_preferences" />

    <fragment
        android:id="@+id/preferencesPreferences"
        android:name="com.motorro.datastore.preferences.PreferencesPreferencesFragment"
        android:label="@string/title_preferences_preferences" />

    <fragment
        android:id="@+id/protoPreferences"
        android:name="com.motorro.datastore.proto.ProtoPreferencesFragment"
        android:label="@string/title_proto_preferences" />

    <fragment
        android:id="@+id/jsonPreferences"
        android:name="com.motorro.datastore.json.JsonPreferencesFragment"
        android:label="@string/title_json_preferences" />
</navigation>